compiler/tools/fpp-check/test/top_import/instance_private.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/top_import/instance_private.fpp: 10.5
    c.pOut -> c.pIn
    ^
error: instance c is not a member of topology B
